# My Updates & Refactors - Define all images in `test-network/.env` - Simplify `test-network/organizations/fabric-ca/registerEnroll.sh`

--- a/test-network/.env
+++ b/test-network/.env
@@ -1,3 +1,9 @@
 COMPOSE_PROJECT_NAME=net
 IMAGE_TAG=latest
 SYS_CHANNEL=system-channel
+
+CA_IMAGE=nexus.isc.co.ir/hyperledger/fabric-ca:1.4.8
+PEER_IMAGE=nexus.isc.co.ir/hyperledger/fabric-peer:2.2.0
+ORDERER_IMAGE=nexus.isc.co.ir/hyperledger/fabric-orderer:2.2.0
+COUCHDB_IMAGE=nexus.isc.co.ir/couchdb:3.1.1
+TOOLS_IMAGE=nexus.isc.co.ir/hyperledger/fabric-tools:2.2.0
