--- a/test-network/.env
+++ b/test-network/.env
@@ -7,3 +7,6 @@ PEER_IMAGE=nexus.isc.co.ir/hyperledger/fabric-peer:2.2.0
 ORDERER_IMAGE=nexus.isc.co.ir/hyperledger/fabric-orderer:2.2.0
 COUCHDB_IMAGE=nexus.isc.co.ir/couchdb:3.1.1
 TOOLS_IMAGE=nexus.isc.co.ir/hyperledger/fabric-tools:2.2.0
+JAVA_ENV_IMAGE=nexus.isc.co.ir/hyperledger/fabric-javaenv:2.2.0
+BASE_OS_IMAGE=nexus.isc.co.ir/hyperledger/fabric-baseos:2.2.0
+BUILDER_IMAGE=nexus.isc.co.ir/hyperledger/fabric-ccenv:2.2.0
