--- a/test-network/.env
+++ b/test-network/.env
@@ -10,3 +10,5 @@ TOOLS_IMAGE=nexus.isc.co.ir/hyperledger/fabric-tools:2.2.0
 JAVA_ENV_IMAGE=nexus.isc.co.ir/hyperledger/fabric-javaenv:2.2.0
 BASE_OS_IMAGE=nexus.isc.co.ir/hyperledger/fabric-baseos:2.2.0
 BUILDER_IMAGE=nexus.isc.co.ir/hyperledger/fabric-ccenv:2.2.0
+
+GOPROXY=http://nexus.isc.co.ir/repository/GoAll/
